src/objects/Center__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CenterCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>CenterCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Center External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Leader</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Centers (Current Loan Officer)</relationshipLabel>
        <relationshipName>Centers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Centers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <inlineHelpText>Location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Branch_Location__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Schedule</label>
        <referenceTo>Meeting_Schedule__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Center</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Center Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000000EAGMA2_00NE0000000HpbzMAC</fullName>
        <active>true</active>
        <field>Client__c.Center__c</field>
        <filterItems>
            <field>Center__c.Branch__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Current_Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Client_Center</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000XkoMAE_00NE0000000HysrMAC</fullName>
        <active>true</active>
        <field>Funder_Portfolio__c.Center__c</field>
        <filterItems>
            <field>Center__c.Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Funder Portfolio_Center</name>
        <sourceObject>Funder_Portfolio__c</sourceObject>
    </namedFilters>
    <pluralLabel>Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>